<resources>
    <string name="app_name">Team Lottery</string>
    <string name="settings">Settings</string>
    <string name="web_url">http://www.zvireciliga.eu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_general">General</string>

    <string name="title_activity_lottery">Draw a Team</string>
    <string name="choose_tile">Choose Tile</string>
    <string name="team_overview">Team overview</string>
    <string name="team_legend">Men / Women / Total</string>
    <string name="dialog_confirm_team">Confirm draft</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_gender">Gender</string>
    <string name="player_male">Man</string>
    <string name="player_female">Woman</string>
    <string name="audit">Audit</string>
    <string name="preference_debug">Debug</string>
    <string name="preference_category_team">Team Settings</string>
    <string name="action_reset">Delete Teams</string>
    <string name="action_initialize">Create Teams</string>
</resources>
