...
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="eu.zvireciliga.teamlottery.gui.main.MainActivity"
    tools:showIn="@layout/activity_main_top">

    <ProgressBar android:id="@+id/progressBar"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:max="72"
                 android:progressTint="@color/colorPrimaryDark"
                 android:secondaryProgressTint="@color/colorAccent"
...
              android:layout_alignParentTop="true"
              android:layout_alignParentEnd="true"
              android:layout_marginEnd="5dp"
              android:layout_marginBottom="10dp"
              tools:ignore="RelativeOverlap"/>

    <ListView android:id="@+id/teamList"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_alignParentStart="true"
              android:layout_below="@+id/textOverview"
              android:layout_above="@+id/progressBar"
              android:divider="@android:color/transparent"
...
